--- a/Languages/Android/questions.json
+++ b/Languages/Android/questions.json
@@ -665,6 +665,29 @@
       "trueOrFalse":true,
       "shortAns":true,
       "tag":"android"
+    },{
+      "id":74,
+      "question":"Which algorithm does Recycler-View DiffUtil follows to optimize its performance?",
+      "details":"It uses Eugene W. Myers's difference algorithm to calculate the minimal number of updates to convert one list into another.",
+      "questionType":"multi ",
+      "trueOrFalse":false,
+      "shortAns":"Eugene W. Myers's difference algorithm",
+      "tag":"Recycler View - Android"
+    },{
+      "id":75,
+      "question":"What are flows in Android ?",
+      "details":"It is data structure that handles asynchronous streams of data which are built on top of coroutines and it can safely perform operations such as network requests or database queries without blocking the main thread.",
+      "questionType":"multi ",
+      "trueOrFalse":false,
+      "shortAns":"Flows are asynchronous data streams in android ."
+
+    },{
+      "id":76,
+      "question":"StateFlow is better than LiveData.",
+      "details":"It has  the ability to emit multiple values at once and the ability to handle errors. This makes StateFlow more expressive and more powerful.",
+      "questionType":"bool",
+      "trueOrFalse":true,
+      "shortAns":"State flow is immutable , more expressive and platform agnostice."
     }
 
 
